--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,10 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-pink.min.css">
   <link rel="stylesheet" href="/style.css">
-  <script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>
 </head>
 <body>
   <div id="app"></div>
+  <script src="https://code.getmdl.io/1.2.1/material.min.js"></script>
   <script src="bundle.js"></script>
 </body>
 </html>
